--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,33 +1,26 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Rails Baby!</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
 <div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-4">Welcome</h1>
+  <p class="lead">All sorts of good things to learn that pertain to programming.</p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  <a class="btn btn-warning btn-lg" href="https://www.google.com" role="button">Learn more</a>
 </div>
 
 <img style="width: 100%" src="https://i.imgur.com/1HEJeHl.png" alt="">
+<div class="container">
+  <div class="row">
+    <div class="col-lg">
+      <h3>New container div!!</h3>
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title">New Card</h4>
+          <p class="card-text">
+            OOOOO what a lovely card!!
+          </p>
+          <a href="https://www.google.com" class="card-link">google</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
