updated with bootstrap

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,48 @@
-
-<div class="jumbotron">
-  <h1 class="display-4">Welcome</h1>
-  <p class="lead">All sorts of good things to learn that pertain to programming.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-warning btn-lg" href="https://www.google.com" role="button">Learn more</a>
-</div>
-
-<img style="width: 100%" src="https://i.imgur.com/1HEJeHl.png" alt="">
 <div class="container">
   <div class="row">
     <div class="col-lg">
-      <h3>New container div!!</h3>
-      <div class="card">
-        <div class="card-block">
-          <h4 class="card-title">New Card</h4>
-          <p class="card-text">
-            OOOOO what a lovely card!!
-          </p>
-          <a href="https://www.google.com" class="card-link">google</a>
-        </div>
-      </div>
+      <h1 class = "question">Are you a creative thinker <br>
+        or a logical one?</h1>
+
+    </div>
+  </div>
+</div>
+
+<div class="jumbotron bg">
+
+  <h1 class="display-4"> <em>Left-Brain Dominant</em> </h1>
+  <p class="lead">
+If you’re left brain dominant
+ you probably like to walk through your
+ learning step by step. You like resources
+ that break down the information into a
+ series of tasks and guide you through
+  those tasks in a sensible fashion.
+   You will also tend to work and learn
+   well with other people who think the
+    same way as you (other left brainers).
+
+</p>
+  <hr class="my-4">
+  <h1 class="display-4"> <em>Right-Brain Dominant</em>  </h1>
+  <p>
+If you’re right brain dominant
+ you will prefer to know the big picture
+  as well as see examples and case studies
+   of best practice. You learn well from
+   observing and discussing and are happy
+   to start work when only a broad goal or
+    outline exists,
+filling in the details as you go.</p>
+  <a class="btn btn-success btn-lg" href="https://www.verywellmind.com/left-brain-vs-right-brain-2795005" role="button">Learn more</a>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg">
+      <img style="width: 100%" src="https://i.imgur.com/Rdd3O84.gif" alt="">
+
+
     </div>
   </div>
 </div>
