--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,6 +1,44 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// font-family: 'Lora', serif;
+// font-family: 'Anton', sans-serif;
+// font-family: 'Libre Baskerville', serif;
+body{
+  background-image: url("https://images.unsplash.com/photo-1534070330587-8b64481f71e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+.navbar{
+  background-color: rgba(20, 139, 12, 0.3)!important;
+
+}
+
+img {
+  width: 100%;
+}
+
+.question{
+font-family: 'Anton'!important;
+color: rgba(60, 100, 20, 0.8);
+text-align: center;
+text-shadow: 2px 2px rgba(199, 199, 199, 0.6);
+
+}
+
+.bg{
+  background: rgba(170, 23 , 23, 0.0)!important;
+  font-family: 'Lora'!important;
+  text-align: center!important
+
+}
+
+a{
+ background-color: rgba(177, 100, 30, 0.7)
+}
+
 .about{
   width: 100%
 }
