--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -28,10 +28,10 @@ text-shadow: 2px 2px rgba(199, 199, 199, 0.6);
 
 }
 
-.bg{
-  background: rgba(170, 23 , 23, 0.0)!important;
-  font-family: 'Lora'!important;
-  text-align: center!important
+#bg{
+  background: rgba(170, 23 , 23, 0.0);
+  font-family: 'Lora';
+  text-align: center;
 
 }
 
