--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="jumbotron bg">
+<div id="bg" class="jumbotron">
 
   <h1 class="display-4"> <em>Left-Brain Dominant</em> </h1>
   <p class="lead">
